@@ -59,11 +59,15 @@
             <key> <string>method_id</string> </key>
             <value>
               <list>
-                <string>_edit</string>
+                <string>_set.*</string>
                 <string>manage_afterAdd</string>
                 <string>manage_afterClone</string>
               </list>
             </value>
+        </item>
+        <item>
+            <key> <string>once_per_transaction</string> </key>
+            <value> <int>1</int> </value>
         </item>
         <item>
             <key> <string>portal_type_filter</string> </key>
