@@ -62,13 +62,14 @@
             </value>
         </item>
         <item>
+            <key> <string>once_per_transaction</string> </key>
+            <value> <int>1</int> </value>
+        </item>
+        <item>
             <key> <string>portal_type_filter</string> </key>
             <value>
               <list>
                 <string>Delivery Cell</string>
-                <string>Production Packing List Line</string>
-                <string>Production Report Cell</string>
-                <string>Production Report Line</string>
                 <string>Purchase Packing List Line</string>
                 <string>Sale Packing List Line</string>
               </list>
