@@ -59,18 +59,19 @@
             <key> <string>method_id</string> </key>
             <value>
               <list>
-                <string>_edit</string>
+                <string>_set.*</string>
               </list>
             </value>
+        </item>
+        <item>
+            <key> <string>once_per_transaction</string> </key>
+            <value> <int>1</int> </value>
         </item>
         <item>
             <key> <string>portal_type_filter</string> </key>
             <value>
               <list>
                 <string>Delivery Cell</string>
-                <string>Production Packing List Line</string>
-                <string>Production Report Cell</string>
-                <string>Production Report Line</string>
                 <string>Purchase Packing List Line</string>
                 <string>Sale Packing List Line</string>
               </list>
