@@ -59,16 +59,18 @@
             <key> <string>method_id</string> </key>
             <value>
               <list>
-                <string>edit</string>
+                <string>_set.*</string>
               </list>
             </value>
+        </item>
+        <item>
+            <key> <string>once_per_transaction</string> </key>
+            <value> <int>0</int> </value>
         </item>
         <item>
             <key> <string>portal_type_filter</string> </key>
             <value>
               <list>
-                <string>Production Packing List</string>
-                <string>Production Report</string>
                 <string>Purchase Packing List</string>
                 <string>Sale Packing List</string>
               </list>
