@@ -1,3 +1,6 @@
+2007-09-05 Kazuhiko
+* Remove packing_list.edit() from Delivery_confirm because expansion will be invoked from interaction workflow.
+
 2007-08-13 Jerome
 * Remove portal type actions that are now defined as global actions
 
